# tengil

./: .gitignore  .tengil.state  AI-ASSISTANT-NOTES.md  ARCHITECTURE_COMPARISON.md  BUGS_FOUND_DURING_TESTING.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  TASKS.md  deploy-dev.sh  install.sh  pyproject.toml  tengil.yml.example  test-on-proxmox.sh  test_new_architecture.py  test_oci_features.py
compose_cache/: README.md
compose_cache/immich/: README.md  docker-compose.yml  metadata.yml
compose_cache/jellyfin/: README.md  docker-compose.yml  version.txt
compose_cache/jupyter/: README.md  docker-compose.yml  version.txt
compose_cache/nextcloud/: README.md  docker-compose.yml  metadata.yml
compose_cache/ollama/: README.md  docker-compose.yml  version.txt
docs/: OCI-GUIDE.md  USER_GUIDE.md  proxmox-oci-research.md
examples/: README.md  container-metadata.yml  deploy-all-apps.md  docker-apps.yml  full-homelab-deploy.yml  full-homelab.yml  ha-mcp-deployment.md  homelab-batch2.yml  jellyfin-deploy.yml  media-server-consumers.yml  multi-pool-andreas.yml  multi-pool-simple.yml  multi-pool.yml  phase2-auto-create.yml  phase2-simple.yml  phase3-permissions.yml  production-deploy.yml  quick-apps.md  resource-pools.yml  single-pool-legacy.yml  tengil.yml.example  test-jellyfin-oci.yml  test-jellyfin.yml  test-nginx-simple.yml  test-oci-auto.yml  test-packages.yml  test-simple.yml
examples/apps/: README.md  app-repos.yml  node-api.yml  python-worker.yml
examples/test-homelab/: .env.example  .gitignore  README.md  deploy.sh
scripts/: check-server.sh  dev-deploy.sh  install.sh  test-cli.sh
tengil/: cli.py  cli_app_commands.py  cli_apps_discovery_commands.py  cli_compose_commands.py  cli_container_commands.py  cli_container_resolution.py  cli_core_commands.py  cli_discover_commands.py  cli_discover_helpers.py  cli_drift_commands.py  cli_drift_helpers.py  cli_env_commands.py  cli_git_commands.py  cli_import_commands.py  cli_new.py  cli_oci_commands.py  cli_package_commands.py  cli_recovery_commands.py  cli_setup_commands.py  cli_state_commands.py  cli_support.py  cli_utility_commands.py  core.py  core_new.py  recommendations.py  smart_suggestions.py
tengil/config/: __init__.py  container_parser.py  desired_state.py  format_migrator.py  loader.py  loader.py.backup  profile_applicator.py  profiles.py  share_parser.py  validator.py
tengil/core/: app_repo_spec.py  applicator.py  config.py  diff_engine.py  (+19 more)
tests/: conftest.py  test_app_models.py  test_apply_backend_selection.py  test_apply_with_consumers.py  test_cli_app.py  test_cli_container.py  test_cli_drift_summary.py  test_cli_help.py  test_cli_repo.py  test_cli_scan_command.py  test_cli_status.py  test_cli_support.py  test_compose_analyzer.py  test_compose_converter.py  test_compose_integration.py  test_compose_merger.py  test_compose_resolver.py  test_config_app_repos.py  test_config_consumers.py  test_config_formats.py  test_config_smart_permissions.py  test_container_backend_selection.py  test_container_creation.py  test_container_env_reconcile.py  test_container_mounts.py  test_container_specs.py  test_core_new_apps.py  test_desired_state_builder.py  test_discovery.py  test_drift_engine.py  test_git_manager.py  test_hwdetect.py  test_integration.py  test_lock.py  test_mount_permission_integration.py  test_multi_pool.py  test_nas_permission_integration.py  test_oci_backend.py  test_oci_backend_integration.py  test_oci_capability.py  (+25 more)
(+68 files in other folders)
